--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ body {
 
 .calc {
   display: flex;
-  flex: 1;
   flex-direction: column;
   align-items: center;
   gap: 20px;
@@ -28,8 +27,10 @@ body {
 }
 
 .display {
+  display: flex;
+  flex: 1 0 auto;
   width: 100%;
-  height: 1.7rem;
+  height: 1.5rem;
   border: solid 1px black;
   margin: 5%;
   padding: 0.2em;
@@ -37,6 +38,7 @@ body {
 
 .input {
   display: flex;
+  flex: 1 1 auto;
   background-color: gray;
   width: 100%;
   border: solid 5px antiquewhite;
@@ -55,8 +57,8 @@ body {
 }
 
 .num-btn {
-  width: 3.1em;
-  height: 3.1em;
+  width: 3.3em;
+  height: 3.3em;
   background-color: antiquewhite;
   border: solid 1px antiquewhite;
   border-radius: 5px;
@@ -64,8 +66,9 @@ body {
   font-weight: 900;
 }
 
-.zero {
-  width: 7em;
+.num-btn:hover,
+.operator:hover {
+  background-color: lightgray;
 }
 
 .operators {
