--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.cdnfonts.com/css/ds-digital');
+
 * {
   padding: 0;
   margin: 0;
@@ -23,22 +25,24 @@ body {
   max-width: 360px;
   max-height: 500px;
   font-size: 1.5rem;
-  padding: 1em;
+  padding: 1.2em;
 }
 
 .display {
   display: flex;
-  flex: 1 0 auto;
+  align-items: center;
   width: 100%;
-  height: 1.5rem;
+  min-height: 1em;
   border: solid 1px black;
   margin: 5%;
-  padding: 0.2em;
+  padding: 0.3em;
+  font-family: 'DS-Digital', sans-serif;
+  font-size: 1.5rem;
+  background-color: antiquewhite;
 }
 
 .input {
   display: flex;
-  flex: 1 1 auto;
   background-color: gray;
   width: 100%;
   border: solid 5px antiquewhite;
@@ -53,7 +57,7 @@ body {
   align-items: center;
   justify-content: space-evenly;
   width: 70%;
-  gap: 0.3em;
+  gap: 0.2em;
 }
 
 .num-btn {
@@ -64,6 +68,7 @@ body {
   border-radius: 5px;
   font-size: 1.5rem;
   font-weight: 900;
+  font-family: 'DS-Digital', sans-serif;
 }
 
 .num-btn:hover,
@@ -87,4 +92,5 @@ body {
   border-radius: 5px;
   font-size: 1.5rem;
   font-weight: 900;
+  font-family: 'DS-Digital', sans-serif;
 }
